--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
     <properties>
         <junit>4.10</junit>
+        <org.jsoup>1.8.3</org.jsoup>
     </properties>
 
     <dependencies>
@@ -19,5 +20,14 @@
             <version>${junit}</version>
             <scope>test</scope>
         </dependency>
+
+        <!--jsoup-->
+        <dependency>
+            <!-- jsoup HTML parser library @ http://jsoup.org/ -->
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>${org.jsoup}</version>
+        </dependency>
+        <!--jsoup end -->
     </dependencies>
 </project>
